Updated portfolio site with new images and pages

--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
                     <div class="page-content">
                         <div class="row">
                             <div class="col-md-12">
-                                <h2 class="section-heading mb-20" style="color:#4fb8e1"><span>1/</span>Blogs</h2>
+                                <h2 class="section-heading mb-20" style="color:#4fb8e1"><span>1/</span>Portfolio</h2>
                                 <!-- /section-heading -->
                                 <div class="blogs">
                                     <div class="row">
