--- a/portfolio-details-05.html
+++ b/portfolio-details-05.html
@@ -1,43 +1,56 @@
 <div class="load-data">
     <div class="popup-main-content">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="portfolio-details-title">
-                        <h2>Planet Under Pressure - Vimeo Video</h2>
-                    </div>
-                    <!-- /portfolio-details-title -->
-                </div>
-                <div class="col-lg-6">
-                    <div class="portfolio-details-info p-0 border-0">
-                        <div class="tags"><span>Client : </span> Orange Slice</div>
-                        <div class="tags"><span>Category : </span> Branding</div>
-                        <div class="tags"><span>Date : </span> 22/January/2020</div>
-                        <div class="tags"><span>Website: : </span> www.orangeslice.com</div>
-                    </div>
-                    <!-- /portfolio-info -->
-                </div>
-                <div class="col-lg-6 mt-40 mt-lg-0">
-                    <p class="portfolio-description">Praesentium ipsum veniam obcaecati accusamus voluptate ad minima hic. Voluptatem iure ex inventore dignissimos exercitationem temporibus harum explicabo praesentium. ipsam accusamus. consectetur adipisicing elit. voluptatem accusantium doloremque laudanti totam rem aperiam, eaque ipsa quae abillo inventore veritatis etque.</p>
-                    <!-- /portfolio-description -->
-                </div>
-                <div class="col-md-12">
-                    <div class="media mt-40">
-                        <iframe src="https://player.vimeo.com/video/117910068?title=0&byline=0"></iframe>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="portfolio-details-nav d-flex justify-content-between">
-                        <div>
-                            <a class="portfolio-link" href="portfolio-details-04.html">Previous Project</a>
-                        </div>
-                        <div>
-                            <a class="portfolio-link" href="portfolio-details-06.html">Next Project</a>
+            <div class="blog-details">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="blog-info">
+                            <div class="tag mt-0">
+                                <span>26/Oct/2019 - Website Design</span>
+                            </div>
+                            <h4 class="blog-details-title">Why UX is important in web and app design?</h4>
                         </div>
                     </div>
-                    <!-- /portfolio-details-nav -->
+                    <div class="col-lg-12">
+                        <p>This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system.</p>
+                        <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img class="img-fluid mt-40" src="img/blogs/blog_01.jpg" alt="">
+                            </div>
+                            <div class="col-md-6">
+                                <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="blockquote">
+                            <p>“ Sedut perspiciatis unde omnis natus error voluptate accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto ”</p>
+                        </div>
+                        <!-- /blockquote -->
+
+                        <h3 class="blog-details-sec-title">What is UX.</h3>
+                        <p class="mt-30">One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
+                        <p class="mt-30">This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system. In other words.</p>
+                    </div>
+
+                    <div class="col-md-12">
+                        <div class="divider"></div>
+                        <!-- /divider -->
+                    </div>
+                    
+                    <div class="col-md-12">
+                        <div class="blog-details-nav d-flex justify-content-between">
+                            <div>
+                                <a class="blog-link" href="blog-details.html">Why swiming is also another important thing for man. <small>PREVIOUS POST</small></a>
+                            </div>
+                            <div class="text-right">
+                                <a class="blog-link" href="blog-details.html">Difference between web design and web development. <small>NEXT POST</small></a>
+                            </div>
+                        </div>
+                        <!-- /portfolio-details-nav -->
+                    </div>
                 </div>
             </div>
+            <!-- /blog-details -->
         </div>
     </div>
 </div>
