--- a/portfolio-details-02.html
+++ b/portfolio-details-02.html
@@ -1,85 +1,56 @@
 <div class="load-data">
     <div class="popup-main-content">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="portfolio-details-title">
-                        <h2>Dashboard builder - Data Management and Performance Analytics Tool.</h2>
+            <div class="blog-details">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="blog-info">
+                            <div class="tag mt-0">
+                                <span>26/Oct/2019 - Website Design</span>
+                            </div>
+                            <h4 class="blog-details-title">Why UX is important in web and app design?</h4>
+                        </div>
                     </div>
-                    <!-- /portfolio-details-title -->
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="portfolio-details-info p-0 border-0">
-                        <div class="tags"><span>Client : </span> Sercurity</div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="portfolio-details-info p-0 border-0">
-                        <div class="tags"><span>Category : </span> Branding</div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="portfolio-details-info p-0 border-0">
-                        <div class="tags"><span>Date : </span> 22/January/2021</div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="portfolio-details-info p-0 border-0">
-                        <div class="tags"><span>Website: : </span> <a href="https://www.figma.com/design/rLIVr6rPC0RhzVoAkJHwQc/Core---Dashboard-Builder---Sercurity?node-id=0-1">TuanDang.Portfolio.com</a></div>
-                    </div>
-                </div>
-                <!-- /portfolio-info -->
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                <p class="portfolio-description">Designed and developed an interactive dashboard to help users monitor and analyze data effectively. Featuring a modern, user-friendly interface with key functionalities such as:</p>
-                <p class="portfolio-description">- Data Overview: Displays key metrics, including customer count and real-time revenue updates.</p>
-                <p class="portfolio-description">- Interactive Charts: Visualizes data with flexible and dynamic charts.</p>
-                <p class="portfolio-description">- Product & Customer Feedback Management: Tracks product status, revenue, and customer comments.</p>
-                <p class="portfolio-description">- Integration Support: Connects with social media platforms and refund management systems.</p>
-                <p class="portfolio-description">- Dark Mode Support: Offers a seamless light/dark mode switch for better user experience and accessibility.</p>
-                <p class="portfolio-description mt-30">Widely used in e-commerce, business analytics, and customer management.</p>
-                <!-- /portfolio-description -->
-                </div>
-            </div>
-            <div class="row">   
-                <div class="col-lg-12">
-                    <div class="portfolio-details-media">
+                    <div class="col-lg-12">
+                        <p>This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system.</p>
+                        <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
                         <div class="row">
-                            <div class="col-lg-5 col-md-5">
-                                <img class="img-fluid mt-40" src="img/portfolio/details/portfolio-details-01.jpg" alt="">
+                            <div class="col-md-6">
+                                <img class="img-fluid mt-40" src="img/blogs/blog_01.jpg" alt="">
                             </div>
-                            <div class="col-lg-5 col-md-5">
-                                <img class="img-fluid mt-40" src="img/portfolio/details/portfolio-details-02.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-5 col-md-5">
-                                <img class="img-fluid mt-40" src="img/portfolio/details/portfolio-details-01.jpg" alt="">
-                            </div>
-                            <div class="col-lg-5 col-md-5">
-                                <img class="img-fluid mt-40" src="img/portfolio/details/portfolio-details-02.jpg" alt="">
+                            <div class="col-md-6">
+                                <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
                             </div>
                         </div>
+                        <div class="blockquote">
+                            <p>“ Sedut perspiciatis unde omnis natus error voluptate accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto ”</p>
+                        </div>
+                        <!-- /blockquote -->
+
+                        <h3 class="blog-details-sec-title">What is UX.</h3>
+                        <p class="mt-30">One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
+                        <p class="mt-30">This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system. In other words.</p>
                     </div>
-                        <!-- /portfolio-details-media -->
+
+                    <div class="col-md-12">
+                        <div class="divider"></div>
+                        <!-- /divider -->
+                    </div>
+                    
+                    <div class="col-md-12">
+                        <div class="blog-details-nav d-flex justify-content-between">
+                            <div>
+                                <a class="blog-link" href="blog-details.html">Why swiming is also another important thing for man. <small>PREVIOUS POST</small></a>
+                            </div>
+                            <div class="text-right">
+                                <a class="blog-link" href="blog-details.html">Difference between web design and web development. <small>NEXT POST</small></a>
+                            </div>
+                        </div>
+                        <!-- /portfolio-details-nav -->
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="portfolio-details-nav d-flex justify-content-between">
-                        <div>
-                            <a class="portfolio-link" href="portfolio-details-01.html">Previous Project</a>
-                        </div>
-                        <div>
-                            <a class="portfolio-link" href="portfolio-details-03.html">Next Project</a>
-                        </div>
-                    </div>
-                    <!-- /portfolio-details-nav -->
-                </div>
-            </div>    
+            <!-- /blog-details -->
         </div>
     </div>
 </div>
