Updated portfolio site with new images and pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="blog-details-01.html" class="blog-link">
+                                                <a href="portfolio-details-01.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_08.jpg" alt="">
                                                     </div>
@@ -90,7 +90,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="blog-details-02.html" class="blog-link">
+                                                <a href="portfolio-details-02.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_05.jpg" alt="">
                                                     </div>
@@ -108,7 +108,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="blog-details-03.html" class="blog-link">
+                                                <a href="portfolio-details-03.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_06.jpg" alt="">
                                                     </div>
@@ -126,7 +126,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="blog-details-04.html" class="blog-link">
+                                                <a href="portfolio-details-04.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_01.jpg" alt="">
                                                     </div>
@@ -162,7 +162,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="blog-details-06.html" class="blog-link">
+                                                <a href="portfolio-details-06.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_03.jpg" alt="">
                                                     </div>
@@ -180,7 +180,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="blog-details-07.html" class="blog-link">
+                                                <a href="portfolio-details-07.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_04.jpg" alt="">
                                                     </div>
@@ -198,7 +198,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="blog-details-08.html" class="blog-link">
+                                                <a href="portfolio-details-08.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_07.jpg" alt="">
                                                     </div>
@@ -216,7 +216,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="blog-details-09html" class="blog-link">
+                                                <a href="portfolio-details-09html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_09.jpg" alt="">
                                                     </div>
@@ -234,7 +234,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="blog-details-10.html" class="blog-link">
+                                                <a href="portfolio-details-10.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_10.jpg" alt="">
                                                     </div>
