Updated portfolio site with new images and pages

--- a/portfolio-details-02.html
+++ b/portfolio-details-02.html
@@ -16,7 +16,7 @@
                         <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
                         <div class="row">
                             <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_01.jpg" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_01.jpg" alt="">
                             </div>
                             <div class="col-md-6">
                                 <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
