--- a/portfolio.html
+++ b/portfolio.html
@@ -78,10 +78,10 @@
                                                     </div>
                                                     <div class="blog-info">
                                                         <div class="tag">
-                                                            <span>Jan/2023 - App - Product</span>
+                                                            <span>Apr/2023 - App - Product</span>
                                                         </div>
                                                         <h4 class="blog-title">
-                                                            <span>Vuihoc Station – Smart Education Ecosystem.</span>
+                                                            <span>Vuihoc Station – Personalized Learning with AI-Powered Innovation.</span>
                                                         </h4>
                                                     </div>
                                                 </a>
