--- a/portfolio-details-01.html
+++ b/portfolio-details-01.html
@@ -6,9 +6,9 @@
                     <div class="col-md-12">
                         <div class="blog-info">
                             <div class="tag mt-0">
-                                <span>26/Oct/2019 - Website Design</span>
+                                <span>Apr/2023 - App - Product</span>
                             </div>
-                            <h4 class="blog-details-title">Why UX is important in web and app design?</h4>
+                            <h4 class="blog-details-title">Vuihoc Station – Personalized Learning with AI-Powered Innovation.</h4>
                         </div>
                     </div>
                     <div class="col-lg-12">
@@ -16,7 +16,7 @@
                         <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
                         <div class="row">
                             <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_01.jpg" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_01.jpg" alt="">
                             </div>
                             <div class="col-md-6">
                                 <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
