--- a/portfolio-details-01.html
+++ b/portfolio-details-01.html
@@ -16,7 +16,7 @@
                         <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
                         <div class="row">
                             <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/portfolio_01.jpg" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_08_a.jpg" alt="">
                             </div>
                             <div class="col-md-6">
                                 <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
@@ -40,10 +40,10 @@
                     <div class="col-md-12">
                         <div class="blog-details-nav d-flex justify-content-between">
                             <div>
-                                <a class="blog-link" href="blog-details.html">Why swiming is also another important thing for man. <small>PREVIOUS POST</small></a>
+                                <a class="blog-link" href="blog-details.html"> <small>PREVIOUS POST</small></a>
                             </div>
                             <div class="text-right">
-                                <a class="blog-link" href="blog-details.html">Difference between web design and web development. <small>NEXT POST</small></a>
+                                <a class="blog-link" href="blog-details.html"><small>NEXT POST</small></a>
                             </div>
                         </div>
                         <!-- /portfolio-details-nav -->
