--- a/portfolio-details-01.html
+++ b/portfolio-details-01.html
@@ -12,8 +12,9 @@
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <p>This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system.</p>
-                        <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
+                        <div>
+                            <a class="blog-link" href="https://www.figma.com/design/cLz6lVBSr5thFWw9oX6EBb/App-Station?node-id=1-2&p=f&t=kkR4WAt9YslOoz5c-0">🥳 View the design on Figma ✌️</a>
+                        </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <img class="img-fluid mt-40" src="img/blogs/portfolio_08_a.jpg" alt="">
@@ -23,7 +24,7 @@
                             </div>
                         </div>
                         <div class="blockquote">
-                            <p>“ Sedut perspiciatis unde omnis natus error voluptate accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto ”</p>
+                            <p>“ Vui Học Station is a learning app for students aged 4 to 11 at the Station learning center. It features a bright blue and orange color scheme, Glassmorphism with 2D illustrations, interactive mascots, and a user-friendly layout with engaging visual effects. The design ensures an intuitive and fun learning experience for young learners. ”</p>
                         </div>
                         <!-- /blockquote -->
 
