--- a/portfolio-details-02.html
+++ b/portfolio-details-02.html
@@ -6,30 +6,31 @@
                     <div class="col-md-12">
                         <div class="blog-info">
                             <div class="tag mt-0">
-                                <span>26/Oct/2019 - Website Design</span>
+                                <span>Jan/2022 - App - Freelance</span>
                             </div>
-                            <h4 class="blog-details-title">Why UX is important in web and app design?</h4>
+                            <h4 class="blog-details-title">TaskPilot – Enterprise IoT Task Management.</h4>
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <p>This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system.</p>
-                        <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
+                        <div>
+                            <a class="blog-link" href="https://www.figma.com/design/4Ti2vbDqORHhrlHmux1NhI/Task-Pilot?node-id=0-2141&p=f&t=yptv2PkbyYuRQiFo-0">🥳 View the design on Figma ✌️</a>
+                        </div>
+                        <p class="mt-30">TaskPilot is designed as a cutting-edge enterprise IoT task management platform, combining a clean and intuitive user experience with powerful IoT integrations. The design focuses on efficiency, clarity, and real-time task monitoring, ensuring seamless workflow execution for businesses.</p>
                         <div class="row">
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/portfolio_01.jpg" alt="">
-                            </div>
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
+                            <div class="col-md-12">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_2_b.jpg" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_2_a.jpg" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_2_c.jpg" alt="">
                             </div>
                         </div>
                         <div class="blockquote">
-                            <p>“ Sedut perspiciatis unde omnis natus error voluptate accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto ”</p>
+                            <p>“ TaskPilot features a minimalist design, ensuring efficiency, clarity, and ease of use for enterprise IoT task management. ”</p>
                         </div>
                         <!-- /blockquote -->
 
                         <h3 class="blog-details-sec-title">What is UX.</h3>
-                        <p class="mt-30">One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <p class="mt-30">This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system. In other words.</p>
+                        <p class="mt-30">TaskPilot is designed to provide a seamless, efficient, and intuitive user experience for enterprise IoT task management. The UX focuses on clarity, ease of use, and productivity, ensuring that users can manage tasks effortlessly.</p>
+                        <p class="mt-30">The minimalist interface reduces distractions, while the structured layout allows for quick navigation and task execution. Real-time data integration enhances decision-making, and responsive design ensures smooth usage across desktop and mobile devices. Clear visual hierarchy and intuitive interactions optimize workflow efficiency, making TaskPilot a powerful tool for enterprise users.</p>
                     </div>
 
                     <div class="col-md-12">
@@ -40,10 +41,10 @@
                     <div class="col-md-12">
                         <div class="blog-details-nav d-flex justify-content-between">
                             <div>
-                                <a class="blog-link" href="blog-details.html">Why swiming is also another important thing for man. <small>PREVIOUS POST</small></a>
+                                <a class="blog-link" href="blog-details.html"> <small>PREVIOUS POST</small></a>
                             </div>
                             <div class="text-right">
-                                <a class="blog-link" href="blog-details.html">Difference between web design and web development. <small>NEXT POST</small></a>
+                                <a class="blog-link" href="blog-details.html"><small>NEXT POST</small></a>
                             </div>
                         </div>
                         <!-- /portfolio-details-nav -->
