--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,24 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="blog-item">
+                                                <a href="portfolio-details-11.html" class="blog-link">
+                                                    <div class="blog-img">
+                                                        <img class="img-fluid" src="img/blogs/portfolio_11.jpg" alt="">
+                                                    </div>
+                                                    <div class="blog-info">
+                                                        <div class="tag">
+                                                            <span>Apr/2021 - App - Freelance</span>
+                                                        </div>
+                                                        <h4 class="blog-title">
+                                                            <span>FlexCoin – Powered by Blockchain.</span>
+                                                        </h4>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <!-- /blog-item -->
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="blog-item">
                                                 <a href="portfolio-details-01.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_08.jpg" alt="">
@@ -96,7 +114,7 @@
                                                     </div>
                                                     <div class="blog-info">
                                                         <div class="tag">
-                                                            <span>Jan/2023 - App - Freelance</span>
+                                                            <span>Jan/2022 - App - Freelance</span>
                                                         </div>
                                                         <h4 class="blog-title">
                                                             <span>TaskPilot – Enterprise IoT Task Management.</span>
