Updated portfolio site with new images and pages

--- a/resume.html
+++ b/resume.html
@@ -81,11 +81,16 @@
                                             <div class="col-md-8">
                                                 <div class="experience-company-info">
                                                     <h5>Description</h5>
-                                                    <p> - Lead a design team of two: Provided mentorship, allocated tasks, and fostered a collaborative environment to deliver impactful design solutions. </p>
-                                                    <p> - Cross-functional collaboration: Worked closely with PO, Developers, and QC teams to enhance the user experience and interface for the VuiHoc platform, ensuring alignment between business goals and user needs. </p>
-                                                    <p> - Developed core design assets: Created wireframes, sitemaps, and user flows to define the MVP product, establishing a clear roadmap for development. </p>
-                                                    <p> - User research and stakeholder alignment: Conducted interviews and usability testing with target users and stakeholders, identifying and prioritizing critical design issues for iterative improvements. </p>
-                                                    <p> - Established a collaborative design system: Initiated and standardized a unified design system to streamline collaboration between design and engineering teams. </p>
+                                                    <p> - Lead a design team of two, mentoring, assigning tasks, and fostering collaboration for impactful solutions. </p>
+                                                    <p> - Worked with PO, Developers, and QC to align UX/UI with business goals on the VuiHoc platform. </p>
+                                                    <p> - Designed wireframes, sitemaps, and user flows to define the MVP roadmap. </p>
+                                                    <p> - Conducted user research and usability tests to identify and improve key design issues.</p>
+                                                    <p> - Established a unified design system to enhance collaboration between design and engineering.</p>
+                                                    <h5>Design Success & Improvements</h5>
+                                                    <p> - Faster Development: A solid design upfront reduces rework and speeds up implementation.</p>
+                                                    <p> - Fewer Revisions: A consistent Design System streamlines collaboration and minimizes feedback loops.</p>
+                                                    <p> - Redesigned Mobile App → +40% user engagement.</p>
+                                                    <p> - Built a Design System → 30% faster feature rollout.</p>
                                                 </div>
                                             </div>
                                         </div>
