Updated portfolio site with new images and pages

--- a/about.html
+++ b/about.html
@@ -78,7 +78,8 @@
                             <div class="col-lg-8 col-md-12">
                                 <h2 class="section-heading"><span>1/</span>Biography</h2>
                                 <!-- /section-heading -->
-                                <p class="biography-text">Hello, I'm Tuan Dang, a Product Designer with 8 years of experience in e-commerce and edtech. I specialize in user-centric, scalable digital products, focusing on UX research, interaction design, and prototyping.<br>Skilled in Figma, Sketch, and Adobe XD, I create data-driven designs that align with business goals. Passionate about solving design challenges, I strive to enhance user experiences through innovation and usability testing.</p>
+                                <p class="biography-text">Hello, I'm Tuan Dang, a Product Designer with 9 years of experience in e-commerce and edtech.
+                                    I specialize in crafting user-centric, scalable digital products, focusing on UX research, interaction design, and prototyping.<br>Proficient in Figma, Sketch, and Adobe XD, I create data-driven designs that align with business goals while enhancing user experiences. Passionate about solving design challenges, I leverage innovation and usability testing to drive intuitive and impactful solutions.</p>
                                 <div class="row mt-30">
                                     <div class="col-md-12">
                                         <div class="standard-text-holder">
