--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,8 @@
                                                     <p> - Designed wireframes, sitemaps, and user flows to define the MVP roadmap. </p>
                                                     <p> - Conducted user research and usability tests to identify and improve key design issues.</p>
                                                     <p> - Established a unified design system to enhance collaboration between design and engineering.</p>
-                                                    <h5>Design Success & Improvements</h5>
+                                                    
+                                                    <h5 class="mt-30">Improvements</h5>
                                                     <p> - Faster Development: A solid design upfront reduces rework and speeds up implementation.</p>
                                                     <p> - Fewer Revisions: A consistent Design System streamlines collaboration and minimizes feedback loops.</p>
                                                     <p> - Redesigned Mobile App → +40% user engagement.</p>
@@ -133,7 +134,7 @@
                                             <div class="col-md-8">
                                                 <div class="experience-company-info">
                                                     <h5>Description</h5>
-                                                    <p>- Team Leadership and Mentorship: Led and mentored a team of 6 junior designers, providing guidance on best practices in UX/UI design and fostering professional growth within the team.</p>
+                                                    <p>- Team Leadership and Mentorship: Lead and mentored a team of 6 junior designers, providing guidance on best practices in UX/UI design and fostering professional growth within the team.</p>
                                                     <p>- Cross-Functional Collaboration: Worked closely with BA, Developers, and Marketing teams to enhance the Chozoi.vn(eCommerce platform) user experience and interface, ensuring seamless coordination across departments.</p>
                                                     <p>- Responsive Website and App Revamp: Spearheaded the revamp of the Chozoi.vn website and app through conceptualization, wireframing, and creating high-fidelity, interactive prototypes, resulting in a 25% increase in user engagement.</p>
                                                     <p>- Brand Strategy and Implementation: Directed a major brand transition by establishing and applying comprehensive brand guidelines across multiple touchpoints, including the ERP system and website.</p>
@@ -157,11 +158,12 @@
                                             <div class="col-md-8">
                                                 <div class="experience-company-info">
                                                     <h5>Description</h5>
-                                                    <p>- Identifying the user's problem and offering a solution.</p>
-                                                    <p>- Do research on competitive product.</p>
-                                                    <p>- Building style guide for the product.</p>
-                                                    <p>- Test for usability.</p>
-                                                    <p>- Collaborate with the engineering team to ensure that the end product is the best it can be.</p>
+                                                    <p>MISA eSign – Digital Signature Application.</p>
+                                                    <p>- Designed and developed UI/UX for MISA eSign, an application for secure digital signing of documents.</p>
+                                                    <p>- Focused on creating a user-friendly, intuitive interface with clear navigation to ensure seamless signing experiences.</p>
+                                                    <p>- Implemented secure features such as two-factor authentication and real-time notifications for document status updates.</p>
+                                                    <p>- Collaborated with the development team to ensure smooth integration and functionality across web and mobile platforms.</p>
+                                                    <p>- Conducted usability testing to refine the process and enhance user satisfaction.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -180,12 +182,12 @@
                                             <div class="col-md-8">
                                                 <div class="experience-company-info">
                                                     <h5>Description</h5>
-                                                    <p>- Lead the revamping of a responsive website and app Fado (Ecommerce) through conceptualization, wireframing, and the construction of interactive, high-fidelity prototypes.</p>
-                                                    <p>- Directed brand transition, established new brand guidelines, and applied them across diverse touch points, including the ERP system and website.</p>
-                                                    <p>- Test for usability.</p>
-                                                    <p>- Mentor 6 junior designers, providing guidance.</p>
-                                                    <p>- Build proof of concept prototypes and design interactive BI dashboards based on client needs and requirements.</p>
-                                                    <p>- Analyze client data, establish KPIs to monitor analysis, and provide strategic insights to drive client performance. Design marketing materials, create website design mockups, & monitor Google Analytics to increase customer engagement.</p>                                
+                                                    <p>- Led the revamp of Fado’s responsive website and app (Ecommerce), improving user experience and increasing conversion rates by 35% through conceptualization, wireframing, and high-fidelity prototyping.</p>
+                                                    <p>- Directed a successful brand transition, creating and implementing new brand guidelines across multiple platforms, including the ERP system and website, leading to a 50% improvement in brand consistency and recognition.</p>
+                                                    <p>- Conducted usability testing, identifying and resolving key UX pain points, which resulted in a 30% reduction in bounce rate and a 40% increase in user retention.</p>
+                                                    <p>- Mentored and coached 6 junior designers, enhancing their skills and improving design efficiency by 25%, reducing iteration cycles.</p>
+                                                    <p>- Analyzed client data and established key performance indicators (KPIs), providing strategic insights that led to a 45% increase in client performance and engagement.</p>
+                                                    <p>- Designed marketing materials and website mockups, monitored Google Analytics, and optimized UX/UI strategies to increase customer engagement by 50%.</p>                                
                                                 </div>
                                             </div>
                                         </div>
@@ -262,7 +264,7 @@
                                     </div>
                                     <!-- /education-info-item -->
                                     <div class="education-info-item">
-                                        <span class="year">2009</span>
+                                        <span class="year">2010</span>
                                         <h4 class="subject"> Adobe Certified Professional</h4>
                                         <p class="institute">Zonotech</p>
                                     </div>
