Lời nhắn mô tả cập nhật

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,42 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="blog-item">
+                                                <a href="portfolio-details-13.html" class="blog-link">
+                                                    <div class="blog-img">
+                                                        <img class="img-fluid" src="img/blogs/portfolio_13.png" alt="">
+                                                    </div>
+                                                    <div class="blog-info">
+                                                        <div class="tag">
+                                                            <span>Jun/2023 - WireFrame - Product Owner</span>
+                                                        </div>
+                                                        <h4 class="blog-title">
+                                                            <span>Pearla Bluebook - Market place - Freelance</span>
+                                                        </h4>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <!-- /blog-item -->
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="blog-item">
+                                                <a href="portfolio-details-12.html" class="blog-link">
+                                                    <div class="blog-img">
+                                                        <img class="img-fluid" src="img/blogs/portfolio_12.jpg" alt="">
+                                                    </div>
+                                                    <div class="blog-info">
+                                                        <div class="tag">
+                                                            <span>Apr/2022 - App - Freelance</span>
+                                                        </div>
+                                                        <h4 class="blog-title">
+                                                            <span>Shoplon Fashion - Ecommerce - Freelance</span>
+                                                        </h4>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <!-- /blog-item -->
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="blog-item">
                                                 <a href="portfolio-details-11.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_11.jpg" alt="">
