--- a/portfolio-details-13.html
+++ b/portfolio-details-13.html
@@ -18,7 +18,7 @@
                             <div class="col-md-12">
                                 <img class="img-fluid mt-40" src="img/blogs/portfolio_13_a.png" alt="">
                                 <img class="img-fluid mt-40" src="img/blogs/portfolio_13_b.png" alt="">
-                                <img class="img-fluid mt-40" src="img/blogs/portfolio_13_c.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_13_c.jpg" alt="">
                             </div>
                         </div>  
                         <!-- /blockquote -->
