--- a/portfolio-details-02.html
+++ b/portfolio-details-02.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-lg-12">
                         <div>
-                            <a class="blog-link" href="https://www.figma.com/design/4Ti2vbDqORHhrlHmux1NhI/Task-Pilot?node-id=0-2141&p=f&t=yptv2PkbyYuRQiFo-0">🥳 View the design on Figma ✌️</a>
+                            <a class="blog-link" href="https://www.figma.com/design/4Ti2vbDqORHhrlHmux1NhI/Task-Pilot?node-id=0-2141&p=f&t=yptv2PkbyYuRQiFo-0" target="_blank">🥳 View the design on Figma ✌️</a>
                         </div>
                         <p class="mt-30">TaskPilot is designed as a cutting-edge enterprise IoT task management platform, combining a clean and intuitive user experience with powerful IoT integrations. The design focuses on efficiency, clarity, and real-time task monitoring, ensuring seamless workflow execution for businesses.</p>
                         <div class="row">
