--- a/portfolio-details-13.html
+++ b/portfolio-details-13.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-lg-12">
                         <div>
-                            <a class="blog-link" href="https://www.figma.com/design/6SgzGTnxESBGsqa6j6ykG6/Pearla-Marketplace?node-id=0-3303&t=SshjTMDbMrFS0am7-0">🥳 View the design on Figma ✌️</a>
+                            <a class="blog-link" href="https://www.figma.com/design/6SgzGTnxESBGsqa6j6ykG6/Pearla-Marketplace?node-id=0-3303&t=SshjTMDbMrFS0am7-0" target="_blank">🥳 View the design on Figma ✌️</a>
                         </div>
                             <div class="col-md-12">
                                 <img class="img-fluid mt-40" src="img/blogs/portfolio_13_a.png" alt="">
