--- a/portfolio-details-11.html
+++ b/portfolio-details-11.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-lg-12">
                         <div>
-                            <a class="blog-link" href="https://www.figma.com/design/i6QCfNM4rcaeo7Od7rNuH1/FlexCoin?node-id=272-8886&p=f&t=Di7MjtssQFNEBntN-0">🥳 View the design on Figma ✌️</a>
+                            <a class="blog-link" href="https://www.figma.com/design/i6QCfNM4rcaeo7Od7rNuH1/FlexCoin?node-id=272-8886&p=f&t=Di7MjtssQFNEBntN-0" target="_blank">🥳 View the design on Figma ✌️</a>
                         </div>
                             <div class="col-md-12">
                                 <img class="img-fluid mt-40" src="img/blogs/portfolio_11_a.png" alt="">
