--- a/portfolio-details-01.html
+++ b/portfolio-details-01.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-lg-12">
                         <div>
-                            <a class="blog-link" href="https://www.figma.com/design/cLz6lVBSr5thFWw9oX6EBb/App-Station?node-id=1-2&p=f&t=kkR4WAt9YslOoz5c-0" target="_blank">🥳 View the design on Figma ✌️</a>
+                            <a class="blog-link" href="https://www.figma.com/design/cLz6lVBSr5thFWw9oX6EBb/App-Station?node-id=1-2&p=f&t=kkR4WAt9YslOoz5c-0" target="_blank" rel="noopener noreferrer">🥳 View the design on Figma ✌️</a>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
