--- a/portfolio-details-12.html
+++ b/portfolio-details-12.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-lg-12">
                         <div>
-                            <a class="blog-link" href="https://www.figma.com/design/hOmJ2Ur6g1BTN1LWDyklgk/ShopLon-Fashion?node-id=49-126" target="_blank">🥳 View the design on Figma ✌️</a>
+                            <a class="blog-link" href="https://www.figma.com/design/hOmJ2Ur6g1BTN1LWDyklgk/ShopLon-Fashion?node-id=49-126" target="_blank" rel="noopener noreferrer">🥳 View the design on Figma ✌️</a>
                         </div>
                             <div class="col-md-12">
                                 <img class="img-fluid mt-40" src="img/blogs/portfolio_12_a.png" alt="">
