Lời nhắn mô tả cập nhật

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,78 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="blog-item">
+                                                <a href="portfolio-details-18.html" class="blog-link">
+                                                    <div class="blog-img">
+                                                        <img class="img-fluid" src="img/blogs/portfolio_18.png" alt="">
+                                                    </div>
+                                                    <div class="blog-info">
+                                                        <div class="tag">
+                                                            <span>Jul/2021 - App</span>
+                                                        </div>
+                                                        <h4 class="blog-title">
+                                                            <span>Habitly * Your Daily Fitness Companion - Freelance</span>
+                                                        </h4>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <!-- /blog-item -->
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="blog-item">
+                                                <a href="portfolio-details-16.html" class="blog-link">
+                                                    <div class="blog-img">
+                                                        <img class="img-fluid" src="img/blogs/portfolio_16.png" alt="">
+                                                    </div>
+                                                    <div class="blog-info">
+                                                        <div class="tag">
+                                                            <span>Jun/2023 - App</span>
+                                                        </div>
+                                                        <h4 class="blog-title">
+                                                            <span>Smart Home App - Freelance</span>
+                                                        </h4>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <!-- /blog-item -->
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="blog-item">
+                                                <a href="portfolio-details-15.html" class="blog-link">
+                                                    <div class="blog-img">
+                                                        <img class="img-fluid" src="img/blogs/portfolio_15.png" alt="">
+                                                    </div>
+                                                    <div class="blog-info">
+                                                        <div class="tag">
+                                                            <span>2022 - App</span>
+                                                        </div>
+                                                        <h4 class="blog-title">
+                                                            <span>Health and Fitness - Freelance</span>
+                                                        </h4>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <!-- /blog-item -->
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="blog-item">
+                                                <a href="portfolio-details-14.html" class="blog-link">
+                                                    <div class="blog-img">
+                                                        <img class="img-fluid" src="img/blogs/portfolio_14.png" alt="">
+                                                    </div>
+                                                    <div class="blog-info">
+                                                        <div class="tag">
+                                                            <span>Dec/2023 - App</span>
+                                                        </div>
+                                                        <h4 class="blog-title">
+                                                            <span>AI Chatbot Mobile App - Freelance</span>
+                                                        </h4>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <!-- /blog-item -->
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="blog-item">
                                                 <a href="portfolio-details-13.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_13.png" alt="">
